--- a/assets/contact.css
+++ b/assets/contact.css
@@ -47,6 +47,12 @@ ul  {
     
 }
 
+.nav li span:active {
+    padding-bottom: 3px;
+    border-bottom: 3px solid #523F6E;
+    
+}
+
 /* FFE794 523F6E */
 
 
@@ -77,7 +83,7 @@ ul  {
 
 input, textarea, .send-button {
      border: 1px solid black;
-     border-radius: 6px;
+     border-radius: 8px;
      height: 60px;
      width: 90%;
      margin: 10px 0px;
@@ -86,14 +92,15 @@ input, textarea, .send-button {
      color: #2C1352;
      padding-left: 20px;
      font-size: 24px;
-     
+     resize: none;
+     -webkit-appearance: none;
 }
 
 ::placeholder {
     font-weight: 200;
     color: black;
     opacity: 1;
-    font-style: italic;
+    
     
 }
 
@@ -101,10 +108,10 @@ textarea {
     height: 200px;
     padding: 15px 20px;
     color: #2C1352;
+    resize: none;
 }
 
 textarea::placeholder {
-   
     line-height: 130%;
 }
 
@@ -222,6 +229,12 @@ p {
     padding-bottom: 3px;    
     border-bottom: 3px solid #523F6E;
 
+}
+
+.footnav li span:active {
+    padding-bottom: 3px;
+    border-bottom: 3px solid #523F6E;
+    
 }
 
 .contact {
