--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,7 @@ ul  {
 .nav li span {
     padding-bottom: 3px;
     border-bottom: 3px solid transparent;
-    transition: border .2s ease-in;
+    transition: border .2s cubic-bezier(1, 0.04, 1, 1);
     
 }
 
@@ -76,6 +76,39 @@ ul  {
         "footnav footnav . . contact contact contact contact . . . footlogo"
         
 }
+
+
+    
+     body {
+        margin: 50px 50px 20px;
+     }
+    
+    .container {
+        grid-gap: 0px 20px;
+        grid-template-areas: 
+        "logo . . . . . . . . . nav nav"
+        ". name name name name name name . . . . ."
+        ". subname subname subname subname subname subname subname subname subname subname subname"
+        ". position position position position position position position position position position ."
+        "chi chi chi chi chi chi chi chi chi chi chi chi"
+        "drag drag drag drag bud bud bud bud orion orion orion orion"
+        "footnav footnav . . contact contact contact contact contact . . footlogo"
+    
+     }
+    
+     .proj {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 20px 0px 20px;
+    } 
+    
+    
+     .bud img {
+       height: 20px;
+       margin: 30%;
+     }
+    
 
 
 
@@ -169,7 +202,7 @@ p {
 .footnav li span {
     padding-bottom: 3px;
     border-bottom: 3px solid transparent;
-    transition: border .2s ease-in;
+    transition: border .2s cubic-bezier(1, 0.04, 1, 1);
 }
 
 .footnav li span:hover {
@@ -222,21 +255,78 @@ p {
      align-self: center;
 }
 
-
-/* .background {
-    height: 730px;
- 
-   
-    background-image: url(chicago.png);
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    background-size: contain;
-    
+.footlogo img {
+    height: 50px;
 }
 
-li:hover {
-    box-sizing: border-box;
-    padding-bottom: 5px;
-    border-width: 100px;
-    border-bottom: 3px solid #3F2A5E;
+
+
+
+
+
+
+@media (max-width: 768px) {
+    
+     body {
+        margin: 50px 50px 22px;
+     }
+    
+    .container {
+        grid-gap: 0px 20px;
+        grid-template-areas: 
+        "logo . . . . . . . . . nav nav"
+        ". name name name name name name . . . . ."
+        ". subname subname subname subname subname subname subname subname subname subname subname"
+        ". position position position position position position position position position position ."
+        "chi chi chi chi chi chi chi chi chi chi chi chi"
+        "drag drag drag drag bud bud bud bud orion orion orion orion"
+        "footnav footnav . . contact contact contact contact . . . footlogo"
+    
+     }
+    
+    .logo img {
+         height: 50px
+         
+     }
+    
+    .name {
+        margin-top: 40px;
+        
+    }
+    .position {
+         margin: 0px 10px 40px 0px;
+         font-size: 20px
+ 
+     }
+    
+     .proj {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 16px 0px 20px;
+    } 
+    
+    .contact li {
+        margin: 0px 8px;
+   }  
+    
+    .drag img {
+       height: 55px;
+       margin: 35%;
+     }
+    
+     .bud img {
+       height: 60px;
+       
+     }
+    
+    .orion img {
+       height: 50px;
+     }
+    
+     .footlogo img {
+     height: 40px;
+  }
+
+
 }
