--- a/assets/style.css
+++ b/assets/style.css
@@ -211,7 +211,7 @@ p {
 .contact a:hover {
    /* color: #3F2A5E; */
     
-    color: #3F2A5E; 
+    color: #523F6E; 
    /*  text-shadow: 0px 1px 6px #5F4881; */
 }
 
