--- a/assets/style.css
+++ b/assets/style.css
@@ -95,6 +95,7 @@ p {
     margin: 10px 0px;
     font-size: 28px;
     font-weight: 200;
+    letter-spacing: .4px;
     grid-area: subname;
 
 }
@@ -103,7 +104,7 @@ p {
     font-size: 24px;
     font-weight: 200;
     line-height: 140%;
-    letter-spacing: .5px;
+    letter-spacing: .4px;
     grid-area: position;
     margin: 30px 0px 60px;
 }
@@ -200,6 +201,7 @@ p {
 }
 
 .contact li {
+    font-weight: normal;
     display: inline;
     margin: 0px 12px;
 }
