--- a/assets/style.css
+++ b/assets/style.css
@@ -143,7 +143,7 @@ p {
     height: 100%;
     width: 100%;
     font-family: helvetica neue;
-    background-color: #292929;
+    background-color: #384B21;
     opacity: 0;
     transition: .7s ease;
 }
