--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,7 @@ html {
 
 body {
     margin: 90px 100px 50px;
+    font-family: "helvetica neue", helvetica, arial, sans-serif;
 }
 
 a {
@@ -35,7 +36,6 @@ ul  {
     
     list-style-type: none;
     line-height: 170%;
-    font-family: helvetica neue;
     font-weight: bold;
     padding: 0;
     margin: 0;
@@ -91,11 +91,12 @@ ul  {
 
 
 p {
-    font-family: helvetica neue;
+    font-family: "helvetica neue", helvetica, arial, sans-serif;
     margin: 0;
 }
 
 .name {
+    font-weight: normal;
     margin: 120px 0px 0px;
     font-size: 48px;
     letter-spacing: -2px;
