--- a/assets/contact.css
+++ b/assets/contact.css
@@ -5,6 +5,8 @@ html {
 
 body {
     margin: 90px 100px 50px;
+    font-family: "helvetica neue", helvetica, arial, sans-serif;
+
 }
 
 a {
@@ -33,7 +35,6 @@ a {
 ul  {
     list-style-type: none;
     line-height: 170%;
-    font-family: helvetica neue;
     font-weight: bold;
     padding: 0;
     margin: 0;
@@ -93,7 +94,6 @@ input, textarea, .send-button {
      height: 60px;
      width: 90%;
      margin: 10px 0px;
-     font-family: helvetica neue;
      font-weight: bold;
      color: #2C1352;
      padding-left: 20px;
@@ -141,12 +141,11 @@ textarea::placeholder {
       
 
 p {
-    font-family: helvetica neue;
     margin: 0;
 }
 
 .name {
-    margin: 120px 0px 0px;
+    margin: 120px 0px 10px;
     font-size: 48px;
     letter-spacing: -2px;
     grid-area: name;
@@ -205,7 +204,6 @@ p {
     grid-area: contact;
     justify-self: center;
     align-self: center;
-    font-family: helvetica neue;
     font-weight: bold;
     font-size: 20px;
     letter-spacing: -.5px;
